modified:   index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="loader-wrapper">
-        <img src="loader.gif" alt="Loading..." class="loader-img">
+        <img src="Profile.jpg" alt="Loading..." class="loader-img">
         <p class="loader-text">Welcome to My Profile</p>
     </div>
     <div id="content" style="display: none;">
