modified:   index.html

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <br>
         <br>
         <footer>
+            <a href="Akka.html" class="footer-link">Akka</a>
             <p>&copy; 2025 Vundela Sravan Sri Siva Kumar Reddy | Profile Page | Skills & Activities</p>
         </footer>
     </div>
