deleted:    Sravan Resume.pdf 	modified:   Style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </div>
             <nav>
                 <a href="#about">About</a>
+                <a href="#Education">Education</a>
                 <a href="#skills">Skills</a>
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
@@ -33,11 +34,38 @@
 
         <section id="about" class="fade-in">
             <h2>About Me</h2>
+            <hr>
             <p>I am a passionate web designer and developer currently studying BTech at Amrita University.</p>
+        </section>
+
+        <section id="Education" class="fade-in">
+            <h2>Education</h2>
+            <hr>
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="edu-title">Bachelor Of Technology (Specialization in AI)</h5>
+                        <p>School: Amrita Vishwa Vidyapeetham<br>City: Amritapuri, India<br>Year: 2020 -
+                            Current<br>CGPA:
+                            8.75
+                        </p>
+                    </div>
+                    <div class="col">
+                        <h5 class="edu-title">Intermediate</h5>
+                        <p>School: Sri Chaitanya Junior College<br>City: Guntur, India<br>Year: 2017 - 2020<br>CGPA: 9.5
+                        </p>
+                    </div>
+                    <div class="col">
+                        <h5 class="edu-title">Matriculation (SSC)</h5>
+                        <p>School: Bashyam Public School<br>City: Guntur, India<br>Year: 2016 - 2017<br>CGPA: 10</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section id="skills" class="fade-in">
             <h2>Skills</h2>
+            <hr>
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
@@ -48,6 +76,7 @@
 
         <section id="projects" class="fade-in">
             <h2>Projects</h2>
+            <hr>
             <table>
                 <thead>
                     <tr>
@@ -65,6 +94,8 @@
 
         <section id="contact" class="fade-in">
             <h2>Contact Me</h2>
+            <hr>
+            <p>Phone: +91 7901013355</p>
             <p>Email: Sonofgopall@gmail.com</p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/vssskr" target="_blank" rel="noopener noreferrer">View
                     Profile</a></p>
