modified:   index.html

--- a/index.html
+++ b/index.html
@@ -44,20 +44,21 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col">
-                        <h5 class="edu-title">Bachelor Of Technology (Specialization in AI)</h5>
-                        <p>School: Amrita Vishwa Vidyapeetham<br>City: Amritapuri, India<br>Year: 2020 -
+                        <h5 class="edu-title">Bachelor Of Technology (Computer Science and Engineering)</h5>
+                        <p>School: Amrita Vishwa Vidyapeetham<br>City: Nagercoil, India<br>Year: 2024 -
                             Current<br>CGPA:
-                            8.75
+                            8.19
                         </p>
                     </div>
                     <div class="col">
                         <h5 class="edu-title">Intermediate</h5>
-                        <p>School: Sri Chaitanya Junior College<br>City: Guntur, India<br>Year: 2017 - 2020<br>CGPA: 9.5
+                        <p>School: Sri Chaitanya Junior College<br>City: Guntur, India<br>Year: 2022 -
+                            2024<br>Percentage: 77.0%
                         </p>
                     </div>
                     <div class="col">
                         <h5 class="edu-title">Matriculation (SSC)</h5>
-                        <p>School: Bashyam Public School<br>City: Guntur, India<br>Year: 2016 - 2017<br>CGPA: 10</p>
+                        <p>School: Bashyam Public School<br>City: Guntur, India<br>Year: 2020 - 2021<br>CGPA: 10</p>
                     </div>
                 </div>
             </div>
@@ -146,6 +147,17 @@
                     name: "Hotel Menu Card",
                     link: "#",
                     description: "A project based on designing an interactive hotel menu card."
+                }, {
+                    number: 3,
+                    name: "Guntur Mirchi Yard",
+                    link: "https://sravan9116.github.io/Guntur-Mirchi-Yard/",
+                    description: "A project showcasing the Guntur Mirchi Yard details and features."
+                },
+                {
+                    number: 4,
+                    name: "Portfolio",
+                    link: "https://sravan9116.github.io/Sravan-Job/",
+                    description: "A personal portfolio website to showcase my projects and skills."
                 }
             ];
 
