modified:   index.html

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 {
                     number: 2,
                     name: "Hotel Menu Card",
-                    link: "#",
+                    link: "https://sravan9116.github.io/Hotel/",
                     description: "A project based on designing an interactive hotel menu card."
                 }, {
                     number: 3,
