modified:   Style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 {
                     number: 1,
                     name: "AVVP-Nagercoil Campus",
-                    link: "https://sravan9116.github.io/AVVP-Nagercoil/",
+                    link: "https://sravan9116.github.io/Avvp-Nagercoil-Campus/",
                     description: "A project showcasing the AVVP-Nagercoil campus details and features."
                 },
                 {
