new file:   Hack1.jpg 	new file:   Hack2-1.jpg 	new file:   Hack2.jpg 	modified:   Style.css 	new file:   ammaprogram.jpg 	new file:   andhracerf.jpg 	new file:   andhratour.jpg 	new file:   ic.jpg 	new file:   idol.jpg 	modified:   index.html 	new file:   stry.jpg 	new file:   stry1.jpg 	new file:   volunter.jpg

--- a/index.html
+++ b/index.html
@@ -103,8 +103,133 @@
             <p>Instagram: <a href="https://www.instagram.com/mr._.chinnu_56/profilecard/?igsh=MWIyZ2dzY2NvNmdlcg=="
                     target="_blank" rel="noopener noreferrer">Visit Instagram</a></p>
         </section>
-        <br>
-        <br>
+
+        <section id="hackthon" class="fade-in">
+            <h2>Hackathon Participation</h2>
+            <hr>
+            <p>I have actively participated in various hackathons, showcasing my skills in web development and
+                problem-solving.
+                These experiences have helped me grow as a developer and collaborate effectively with teams.</p>
+
+            <div class="hackathon-entries">
+                <div class="hackathon-entry">
+                    <h4>Hackathon 1</h4>
+                    <img src="Hack1.jpg" alt="Hackathon 1" class="hackathon-image">
+                    <img src="hackathon1_certificate.jpg" alt="Hackathon 1 Certificate" class="hackathon-image">
+                    <p>SIH 2024 – Smart India Hackathon<br>
+                        Hackathon: Smart India Hackathon 2024<br>
+                        PROBLEM STATEMENT ID- SIH1589<br>
+                        Problem Statement Title: Digital Platform for Agriculture Supply Chain / Market Digitization<br>
+                        Team id:TH1589<br>
+                        Team Name: Elite Hexagon<br>
+                        Category: Software<br>
+                        Role: Full-stack Developer / Problem-Solver<br>
+                        <b>Our Team is Selected from the Inter-campus</b>
+                    </p>
+                </div>
+
+                <div class="hackathon-entry">
+                    <h4>Hackathon 2</h4>
+                    <img src="Hack2-1.jpg" alt="Hackathon 2" class="hackathon-image">
+                    <img src="hackathon1_certificate.jpg" alt="Hackathon 2 Certificate" class="hackathon-image">
+                    <p>SIH 2025 – Smart India Hackathon<br>
+                        Hackathon: Smart India Hackathon 2024<br>
+                        Problem Statement ID: 25085<br>
+                        Problem Statement Title: AI Driven IoT Enabled Precise Water Leakage Detection System for Public
+                        Pipelines<br>
+                        Team id:TH25 <br>
+                        Team Name: Recurverse<br>
+                        Category: Hardware<br>
+                        Role: Making an Map integration (Software - app development)<br>
+                        <b>Our Team is Selected from the Inter-campus</b>
+                    </p>
+                </div>
+            </div>
+            <br>
+            <br>
+        </section>
+        <section id="achievements" class="fade-in">
+            <h2>Achievements</h2>
+            <hr>
+
+            <div class="achievement-entries">
+
+                <!-- Achievement 1 -->
+                <div class="achievement-entry">
+                    <h4>🏆 Campus Badminton Tournament</h4>
+                    <img src="badminton_match.jpg" alt="Badminton Tournament" class="achievement-image">
+                    <img src="badminton_certificate.jpg" alt="Badminton Tournament Certificate"
+                        class="achievement-image">
+                    <p>
+                        Secured <strong>1st place</strong> in the campus-level badminton tournament (Seniors vs Juniors)
+                        held at <strong>Amrita Vishwa Vidyapeetham, Nagercoil Campus</strong> on
+                        <strong>22-03-2025</strong>.
+                    </p>
+                </div>
+
+                <!-- Achievement 2 -->
+                <div class="achievement-entry">
+                    <h4>🏸 Inter-Campus Badminton Tournament</h4>
+                    <img src="ic.jpg" alt="Intercampus Badminton" class="achievement-image">
+                    <img src="intercampus_certificate.jpg" alt="Intercampus Certificate" class="achievement-image">
+                    <p>
+                        Selected to represent <strong>Nagercoil Campus</strong> at the <strong>Inter-Campus Badminton
+                            Tournament</strong>
+                        held at <strong>Amrita Vishwa Vidyapeetham, Chennai Campus</strong> on
+                        <strong>10-08-2025</strong>.
+                        Although I didn’t win, the experience enhanced my competitive spirit and teamwork.
+                    </p>
+                </div>
+
+                <!-- Achievement 3 -->
+                <div class="achievement-entry">
+                    <h4>🎨 Eco-Friendly Ganesh Idol Making</h4>
+                    <img src="idol.jpg" alt="Ganesh Idol Making Event" class="achievement-image">
+                    <img src="ganesh_idol_certificate.jpg" alt="Ganesh Idol Certificate" class="achievement-image">
+                    <p>
+                        Participated in the <strong>Eco-Friendly Ganesh Idol Making</strong> event conducted by the
+                        <strong>IKS Club</strong> on <strong>26-08-2025</strong>. Gained hands-on experience in
+                        sustainable
+                        creativity and cultural promotion.
+                    </p>
+                </div>
+
+                <!-- Achievement 4 -->
+                <div class="achievement-entry">
+                    <h4>🤝 Volunteering – Amma’s Program</h4>
+                    <img src="ammaprogram.jpg" alt="Volunteering for Amma’s Program" class="achievement-image">
+                    <img src="volunter.jpg" alt="Volunteering Certificate" class="achievement-image">
+                    <p>
+                        Volunteered for <strong>Chancellor Amma Mata Amritanandamayi Devi’s</strong> event in the
+                        <strong>Crowd Management Team</strong>. The experience helped me develop
+                        leadership, responsibility, and service values. Certificate received for contribution.
+                    </p>
+                </div>
+                <div class="achievement-entry">
+                    <h4>🏆 Adudham Andhra Badminton Tournament</h4>
+                    <img src="andhratour.jpg" alt="Adudham Andhra Badminton Tournament" class="achievement-image">
+                    <img src="andhracerf.jpg" alt="Adudham Andhra Badminton Tournament Certificate"
+                        class="achievement-image">
+                    <p>
+                        Achieved <strong>Runner-up</strong> position in the district-level badminton tournament
+                        <strong>"Adudham Andhra"</strong>, organized by CM Jagan Mohan Reddy in 2023. Represented
+                        <strong>Guntur district</strong> and showcased competitive badminton skills.
+                    </p>
+                </div>
+                <div class="achievement-entry">
+                    <h4>Short Story Writing </h4>
+                    <img src="stry1.jpg" alt="Story Writing" class="achievement-image">
+                    <img src="stry.jpg" alt="Story Writing Certificate" class="achievement-image">
+                    <p>
+                        Won <strong>1st prize</strong> in the short story writing competition conducted by the
+                        <strong>Linguistics Club</strong> at <strong>Amrita Vishwa Vidyapeetham, Nagercoil</strong> on
+                        <strong>09th April 2025</strong>.
+                    </p>
+                </div>
+
+            </div>
+        </section>
+
         <footer>
             <p>&copy; 2025 Vundela Sravan Sri Siva Kumar Reddy | Profile Page | Skills & Activities</p>
         </footer>
@@ -138,27 +263,36 @@
             const projects = [
                 {
                     number: 1,
-                    name: "AVVP-Nagercoil Campus",
-                    link: "https://sravan9116.github.io/Avvp-Nagercoil-Campus/",
-                    description: "A project showcasing the AVVP-Nagercoil campus details and features."
-                },
-                {
-                    number: 2,
-                    name: "Hotel Menu Card",
-                    link: "https://sravan9116.github.io/Hotel/",
-                    description: "A project based on designing an interactive hotel menu card."
-                }, {
-                    number: 3,
                     name: "Guntur Mirchi Yard",
                     link: "https://sravan9116.github.io/Guntur-Mirchi-Yard/",
                     description: "A project showcasing the Guntur Mirchi Yard details and features."
                 },
                 {
-                    number: 4,
+                    number: 2,
                     name: "Portfolio",
                     link: "https://sravan9116.github.io/Sravan-Job/",
                     description: "A personal portfolio website to showcase my projects and skills."
-                }
+                },
+
+                {
+                    number: 3,
+                    name: "AVVP-Nagercoil Campus",
+                    link: "https://sravan9116.github.io/Avvp-Nagercoil-Campus/",
+                    description: "A project showcasing the AVVP-Nagercoil campus details and features."
+                },
+                {
+                    number: 4,
+                    name: "Hotel Menu Card",
+                    link: "https://sravan9116.github.io/Hotel/",
+                    description: "A project based on designing an interactive hotel menu card."
+                },
+                {
+                    number: 5,
+                    name: "Mata Amritanandamayi Devi- Life theme",
+                    link: "https://sravan9116.github.io/amma-website/frontend/index.html",
+                    description: "A project based on the life theme of Mata Amritanandamayi Devi."
+                },
+
             ];
 
             const tableBody = document.getElementById("projects-table-body");
