modified:   Style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
         <header>
             <div class="header-left">
                 <h1 class="fade-in">Vundela Sravan Sri Siva Kumar Reddy</h1>
-                <p class="fade-in">BTech 1st Year | Web Developer</p>
+                <p class="fade-in">BTech 2nd Year | Web Developer</p>
             </div>
             <nav>
                 <a href="#about">About</a>
                 <a href="#Education">Education</a>
                 <a href="#skills">Skills</a>
                 <a href="#projects">Projects</a>
-                <a href="#contact">Contact</a>
+                <a href="#contact">Contact</a><br><br><br>
+                <a href="#hackthon">Hackathon</a>
+                <a href="#achievements">Achievements</a>
             </nav>
             <div class="header-right">
                 <img src="Profile.jpg" alt="Your Profile" class="profile-img">
