--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="edu-title">Bachelor Of Technology (Computer Science and Engineering)</h5>
-                        <p>School: Amrita Vishwa Vidyapeetham<br>City: Nagercoil, India<br>Year: 2024 -
+                        <p>College: Amrita Vishwa Vidyapeetham<br>City: Nagercoil, India<br>Year: 2024 -
                             Current<br>CGPA:
-                            8.19
+                            8.36
                         </p>
                     </div>
                     <div class="col">
                         <h5 class="edu-title">Intermediate</h5>
-                        <p>School: Sri Chaitanya Junior College<br>City: Guntur, India<br>Year: 2022 -
+                        <p>College: Sri Chaitanya Junior College<br>City: Guntur, India<br>Year: 2022 -
                             2024<br>Percentage: 77.0%
                         </p>
                     </div>
