new file:   Photo id.jpeg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="loader-wrapper">
-        <img src="Profile.jpg" alt="Loading..." class="loader-img">
+        <img src="Photo id.jpeg" alt="Loading..." class="loader-img">
         <p class="loader-text">Welcome to My Profile</p>
     </div>
     <div id="content" style="display: none;">
