modified:   index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="#achievements">Achievements</a>
             </nav>
             <div class="header-right">
-                <img src="Profile.jpg" alt="Your Profile" class="profile-img">
+                <img src="Photo id.jpeg" alt="Your Profile" class="profile-img">
             </div>
         </header>
 
